fix: 🐛 mute and z-index issues

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -3,12 +3,16 @@
 @media (hover) {
 
     .card:hover {
-        --height: 16rem;
-        height: var(--height);
-        width: calc(4/3 * var(--height));
+        // --height: 16rem;
+        // height: var(--height);
+        // width: calc(4/3 * var(--height));
+        position: relative;
+        z-index: 10;
+        transform: scale(1.2);
+        filter: drop-shadow(0 0 0.5rem black);
 
         .title {
-            white-space: unset;
+            // white-space: unset;
             // animation: showlines 0.4s 1 forwards;
         }
 
@@ -25,7 +29,7 @@
     width: calc(3 / 4 * var(--height));
     scroll-snap-align: start;
     position: relative;
-    transition: all 300ms 100ms ease;
+    transition: all 300ms ease;
     display: flex;
     justify-content: center;
 
@@ -36,6 +40,7 @@
         inset: 0;
         display: grid;
         align-content: end;
+        border-radius: 1rem;
     }
 
     .title {
