--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -80,4 +80,5 @@
     height: var(--height);
     width: calc(3/4 * var(--height));
     border-radius: var(--border-radius);
+    overflow: hidden;
 }
